Adicionei uma página de 404

--- a/static/templates/components/notes.html
+++ b/static/templates/components/notes.html
@@ -1,4 +1,4 @@
-<li class="note" data-id= "{id}">
+<li class="note" data-id= "{id}" style="background-color: {color}">
     <h3>{title}</h3>
     <p>{details}</p>
     <div class="note-buttons">
