--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -20,10 +20,9 @@
     <div class="submit-box">
       <div class='submit-form'>
         <form id="note-form">
-          <label for="titulo">Título:</label>
-          <input id="titulo" type="text" name="titulo" placeholder='Digite o título da sua nota'required />
-          <label for="detalhes">Detalhes:</label>
-          <textarea id="detalhes" name="detalhes" placeholder="Digite os detalhes da sua nota" required></textarea>
+          <label style="font-weight: bold;">Adicione uma Nota:</label>
+          <input id="titulo" type="text" name="titulo" placeholder='Digite seu Título...'required />
+          <textarea id="detalhes" name="detalhes" placeholder="Adicione os Detalhes..." required></textarea>
           <button type="submit">Enviar</button>
         </form>
       </div>
