--- a/static/css/get-it.css
+++ b/static/css/get-it.css
@@ -36,6 +36,7 @@ body {
     box-shadow: 0.4rem;
     gap: 3rem;
     padding: 1rem;
+    box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.3);    
 }
 
 /* Caixa de submissão com sombra */
@@ -87,6 +88,7 @@ body {
 .submit-box button:hover {
     background-color: #000000;
     color: white;
+    transition: ease 0.3s;
 }
 
 /* Contêiner das notas */
@@ -106,27 +108,29 @@ body {
     box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.2);
     word-wrap: break-word;
     position: relative;
-    min-height: 100px;
+    min-height: 180px;
     font-family: 'Poppins', sans-serif;
     transition: transform 0.2s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: space-evenly;
-    gap: 0.7rem;
+    gap: 0.7rem;    
+}
+
+.notes-container .note {
+    transition: cubic-bezier(0.075, 0.82, 0.165, 0.5);
+}
+
+.ghost {
+    opacity: 0.5;
+    background: rgba(0, 0, 0, 0.1);
 }
 
 /* Efeito de levantar quando passa o mouse */
 .note:hover {
     transform: scale(1.05);
-}
-
-/* Definição de cores aleatórias para os post-its */
-.note:nth-child(5n+1) { background-color: #ffeb99; } /* Amarelo claro */
-.note:nth-child(5n+2) { background-color: #ffcccb; } /* Rosa claro */
-.note:nth-child(5n+3) { background-color: #c3f3c3; } /* Verde claro */
-.note:nth-child(5n+4) { background-color: #add8e6; } /* Azul claro */
-.note:nth-child(5n)   { background-color: #e6c3f3; } /* Roxo claro */
+}   
 
 /* Cabeçalho da nota */
 .note-header {
@@ -135,18 +139,21 @@ body {
     align-items: center;
 }
 
-/* Estilização do título */
 .note h3 {
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-bottom: 5px;
-    text-transform: uppercase;
-    font-size: 1rem;
+    white-space: nowrap; /* Impede a quebra de linha */
+    overflow: hidden; /* Oculta o excesso de texto */
+    text-overflow: ellipsis; /* Adiciona os três pontinhos (...) */
 }
 
-/* Estilização do texto */
 .note p {
-    font-size: 14px;
-    flex-grow: 1;
+    font-size: 1rem;
+    overflow: hidden; /* Oculta o texto que ultrapassar */
+    text-overflow: ellipsis; /* Adiciona os três pontinhos (...) */
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Limita para 3 linhas */
+    -webkit-box-orient: vertical;
 }
 
 /* Botões de editar e excluir */
