Fix - Tamanho das notas, animação de edição e Header

--- a/static/templates/components/notes.html
+++ b/static/templates/components/notes.html
@@ -1,4 +1,5 @@
 <li class="note" data-id= "{id}" style="background-color: {color}">
+    <div class="note-body">
     <h3>{title}</h3>
     <p>{details}</p>
     <div class="note-buttons">
@@ -12,5 +13,8 @@
             <button type="submit" title="Deletar">
                 <span class="material-symbols-outlined"> delete </span>
             </button>
+    </div>
+    </div>  
+    <div class="back">
     </div>
 </li>
