--- a/static/css/get-it.css
+++ b/static/css/get-it.css
@@ -11,6 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    margin-top: 80px;
 }
 
 .logo-getit {
@@ -27,6 +28,8 @@ body {
 }
 
 .img_logo {
+    position: fixed;  /* Mantém a logo sempre visível */
+    top: 0;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -37,6 +40,12 @@ body {
     gap: 3rem;
     padding: 1rem;
     box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.3);    
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.hidden {
+    transform: translateY(-100%);
+    opacity: 0;
 }
 
 /* Caixa de submissão com sombra */
@@ -94,42 +103,64 @@ body {
 /* Contêiner das notas */
 .notes-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 0.6fr));
-    max-width: 80%;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 0.6fr));
+    max-width: 90%;
     gap: 15px;
     padding: 20px;
     list-style: none;
 }
 
-/* Estilo dos adesivos */
 .note {
     padding: 15px;
     border-radius: 10px;
     box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.2);
-    word-wrap: break-word;
     position: relative;
-    min-height: 180px;
-    font-family: 'Poppins', sans-serif;
-    transition: transform 0.2s ease-in-out;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: space-evenly;
-    gap: 0.7rem;    
+    transform-style: preserve-3d;
+    min-height: 250px;
 }
 
-.notes-container .note {
+.note-body {
+    word-wrap: break-word;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: space-evenly;
+    gap: 0.7rem;
+    height: 100%;
+}
+.note.flipped {
+    transform: rotateY(180deg);
+    transition: transform 0.5s ease;
+}
+.note-body.none {
+    display: none;
+}
+
+.note .front,
+.note .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.note .back {
+    transform: rotateY(180deg);
+}
+
+.notes-container, .note{
     transition: cubic-bezier(0.075, 0.82, 0.165, 0.5);
 }
 
 .ghost {
-    opacity: 0.5;
-    background: rgba(0, 0, 0, 0.1);
+    opacity: 0;
 }
 
 /* Efeito de levantar quando passa o mouse */
 .note:hover {
-    transform: scale(1.05);
+    transform: scale(1.015);
+    transition: ease-in-out 0.2s;
 }   
 
 /* Cabeçalho da nota */
@@ -142,17 +173,19 @@ body {
 .note h3 {
     font-size: 1.2rem;
     font-weight: bold;
-    white-space: nowrap; /* Impede a quebra de linha */
-    overflow: hidden; /* Oculta o excesso de texto */
-    text-overflow: ellipsis; /* Adiciona os três pontinhos (...) */
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    display: -webkit-box;
+    -webkit-line-clamp: 3; 
+    -webkit-box-orient: vertical;
 }
 
 .note p {
     font-size: 1rem;
-    overflow: hidden; /* Oculta o texto que ultrapassar */
-    text-overflow: ellipsis; /* Adiciona os três pontinhos (...) */
+    overflow: hidden; 
+    text-overflow: ellipsis; 
     display: -webkit-box;
-    -webkit-line-clamp: 3; /* Limita para 3 linhas */
+    -webkit-line-clamp: 3; 
     -webkit-box-orient: vertical;
 }
 
@@ -207,6 +240,10 @@ body {
     gap: 10px;
 }
 
+.edit-detalhes {
+    height: 100%;
+}
+
 /* Campos do formulário */
 .modal-content input {
     width: 100%;
@@ -253,4 +290,8 @@ body {
     flex-direction: column;
     height: 100%;
     gap: 1rem;
+}
+.div-edit-form label {
+    font-weight: bold;
+    font-size: 1.1rem;
 }
