Edição nas notas, Vizualiação e Melhora na interface

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -42,6 +42,21 @@
             <input id="edit-titulo" type="text" name="titulo" required />
             <label for="edit-detalhes">Detalhes:</label>
             <textarea class="edit-detalhes" id="edit-detalhes" name="detalhes" required ></textarea>
+                    <!-- Seção de seleção de cor -->
+                    <label for="editColor">Cor da Nota:</label>
+                    <div id="colorPicker">
+                        <button type="button" class="color-option" style="background-color: #ff7455;" data-color="#ff7455"></button>
+                        <button type="button" class="color-option" style="background-color: #68ff84;" data-color="#68ff84"></button>
+                        <button type="button" class="color-option" style="background-color: #8097ff;" data-color="#8097ff"></button>
+                        <button type="button" class="color-option" style="background-color: #ffef5c;" data-color="#ffef5c"></button>
+                        <button type="button" class="color-option" style="background-color: #ff9dd6;" data-color="#ff9dd6"></button>
+                        <button type="button" class="color-option" style="background-color: #a8ffe2;" data-color="#a8ffe2"></button>
+                        <button type="button" class="color-option" style="background-color: #b8abff;" data-color="#b8abff"></button>
+                        <button type="button" class="color-option" style="background-color: #dcff71;" data-color="#dcff71"></button>
+                        <button type="button" class="color-option" style="background-color: #ffc69e;" data-color="#ffc69e"></button>
+                        <button type="button" class="color-option" style="background-color: #56beff;" data-color="#56beff"></button>
+                    </div>
+        
             <div class="modal-bottom">
             <div class="modal-buttons">
                 <button type="submit" class="save-btn">Salvar</button>
