--- a/static/css/get-it.css
+++ b/static/css/get-it.css
@@ -119,6 +119,34 @@ body {
     min-height: 250px;
 }
 
+/* Sobreposição (overlay) */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Escurecendo o fundo */
+    z-index: 999; /* Fica atrás da nota expandida */
+    display: none; /* Inicialmente escondida */
+    transition: all 0.3s ease-in-out;
+}
+
+/* Nota expandida */
+.note.expanded {
+    position: fixed;
+    top: 20%;
+    left: 20%;
+    width: 60vw;
+    height: 60vh;
+    z-index: 1000;
+    background: white;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    transition: all 0.3s ease-in-out;
+    pointer-events: auto; /* Permite clicar na nota expandida */
+}
+
 .note-body {
     word-wrap: break-word;
     font-family: 'Poppins', sans-serif;
@@ -131,25 +159,13 @@ body {
 }
 .note.flipped {
     transform: rotateY(180deg);
-    transition: transform 0.5s ease;
+    transition: transform 0.3s ease;
 }
 .note-body.none {
     display: none;
 }
 
-.note .front,
-.note .back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-}
-
-.note .back {
-    transform: rotateY(180deg);
-}
-
-.notes-container, .note{
+.notes-container{
     transition: cubic-bezier(0.075, 0.82, 0.165, 0.5);
 }
 
@@ -178,6 +194,7 @@ body {
     display: -webkit-box;
     -webkit-line-clamp: 3; 
     -webkit-box-orient: vertical;
+    cursor: pointer;
 }
 
 .note p {
@@ -225,6 +242,28 @@ body {
     background: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
     justify-content: center;
     align-items: center;
+    z-index: 1001;
+}
+
+/* Estilo para os botões de seleção de cor */
+#colorPicker {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.color-option {
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    outline: none;
+}
+
+.color-option:hover {
+    opacity: 0.8;
+    border: 1px black solid;
 }
 
 /* Conteúdo do modal */
